cluster/apps/security/cert-manager/app/dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-cert-manager
  namespace: cert-manager
spec:
  selector:
    app: cert-manager
  clusterIP: None
