cluster/apps/security/cert-manager/app/network-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-cluster-to-cert-manager-webhook"
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: webhook
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
